13752 stat: variable may be used uninitialized Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Dan McDonald <danmcd@joyent.com>